[package]
name = "xref"
version = "0.1.0"
authors = ["Michał Muskała <micmus@whatsapp.com>"]
edition = "2018"

[dependencies]
beam_file = "0.2.4"
string-interner = { version = "0.12.1", default-features = false, features = ["std", "inline-more", "backends"] }
anyhow = "1.0.35"
fxhash = "0.2.1"
pico-args = "0.3.4"
rayon = "1.5"

[profile.release]
debug = true
